5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1679_1100.log
== TEST (2019-04-23 17:44:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=input(input("Entrada:"))
print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b=Mico-leao-dourado
elif(q==o):
	b=Onca-pintada
elif(q==ga):
	b=Garoupa
print("Animal:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q=input(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:44:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=input(input("Entrada:"))
print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b=Mico-leao-dourado
elif(q==o):
	b=Onca-pintada
elif(q==ga):
	b=Garoupa
print("Animal:",a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q=input(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:44:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=input(input("Entrada:"))
print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b=Mico-leao-dourado
elif(q==o):
	b=Onca-pintada
elif(q==ga):
	b=Garoupa
print("Animal:",b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q=input(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:45:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=input(input("Entrada:"))
print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"
print("Animal:",b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q=input(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:58:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=input(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and ):
	if(q==t):
	b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"

print("Animal:",b)

-- ERROR:
File "XXXX", line 15
    if(q!=t and q!=g and q!=a and ):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:59:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=input(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	if(q==t):
	b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
else:
	b="animal: invalido"

print("Animal:",b)

-- ERROR:
File "XXXX", line 17
    b="Tartaruga"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:01:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=input(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	if(q==t):
	b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
else:
	b="invalido"

print("Animal:",b)

-- ERROR:
File "XXXX", line 17
    b="Tartaruga"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:01:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=input(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
else:
	b="invalido"

print("Animal:",b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q=input(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:02:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=input(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
else:
	b="invalido"

print("Animal:",b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q=input(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:02:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
else:
	b="invalido"

print("Animal:",b)

-- OUTPUT:
100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:03:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"


print("Animal:",b)

-- ERROR:
File "XXXX", line 19
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:03:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"


print("Animal:",b)

-- ERROR:
File "XXXX", line 19
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:04:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:04:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:04:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:04:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- EXECUTION TIME:
0.169683
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:05:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:05:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:05:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:05:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:05:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:05:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:06:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="Invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:06:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="Invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garca"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- EXECUTION TIME:
0.207091
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:06:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="Invalido"
elif(q==t):
	b="Tartaruga"
elif(q==g):
	b="Garça"
elif(q==a):
	b="Arara"
elif(q==m):
	b="Mico-leao-dourado"
elif(q==o):
	b="Onca-pintada"
elif(q==ga):
	b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:09:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="Invalido"
else:
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:09:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	b="Invalido"
else:
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"

print("Animal:",b)

-- EXECUTION TIME:
0.154376
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:10:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t or q!=g or q!=a or q!=m or q!=o or q!=ga):
	b="Invalido"
else:
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"

print("Animal:",b)

-- OUTPUT:
100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:11:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t or q!=g or q!=a or q!=m or q!=o or q!=ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b="Invalido"
print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:11:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t or q!=g or q!=a or q!=m or q!=o or q!=ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b="Invalido"
print("Animal:",b)

-- EXECUTION TIME:
0.208824
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:13:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Entrada:"))

print(x)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:13:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Entrada:"))

print(X)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(X)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:13:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("Entrada:"))

print(X)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:13:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("Entrada:"))

print(X)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:14:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("Entrada:"))

print(X)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:14:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("Entrada:"))

print(X)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:14:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("Entrada:"))

print(X)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:14:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("Entrada:"))

print(X)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:14:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("Entrada:"))

print(X)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:14:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input("Entrada:"))

print(X)
t=2
g=5
a=10
m=20
o=50
ga=100

if(X!=t or X!=g or X!=a or X!=m or X!=o or X!=ga):
	if(X==t):
		Y="Tartaruga"
	else:
		if(X==g):
			Y="Garca"
		else:
			if(X==a):
				Y="Arara"
			else:
				if(X==m):
					Y="Mico-leao-dourado"
				else:
					if(X==o):
						Y="Onca-pintada"
					else:
						if(X==ga):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:15:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b="invalido"
print("Animal:",b)

-- OUTPUT:
100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:15:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100

if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b="Invalido"
print("Animal:",b)

-- OUTPUT:
100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:16:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q!=t and q!=g and q!=a and q!=m and q!=o and q!=ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print("Animal:",b)

-- OUTPUT:
100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:17:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:17:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print("Animal:",b)

-- EXECUTION TIME:
0.131393
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:17:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print("Animal:",b)

-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:18:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print(b)


-- OUTPUT:
100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:18:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print(b)


-- EXECUTION TIME:
0.137895
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:18:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print("animal:"b)


-- ERROR:
File "XXXX", line 35
    print("animal:"b)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:18:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print("animal:",b)


-- OUTPUT:
100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:19:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print("animal:",b)


-- OUTPUT:
100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:19:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print("animal:",b)


-- OUTPUT:
100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:19:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)
t=2
g=5
a=10
m=20
o=50
ga=100
C="Invalido"
if(q==t or q==g or q==a or q==m or q==o or q==ga):
	if(q==t):
		b="Tartaruga"
	else:
		if(q==g):
			b="Garca"
		else:
			if(q==a):
				b="Arara"
			else:
				if(q==m):
					b="Mico-leao-dourado"
				else:
					if(q==o):
						b="Onca-pintada"
					else:
						if(q==ga):
							b="Garoupa"
	
else:
	b=C
print("animal:",b)


-- OUTPUT:
100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:20:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

C="Invalido"
if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- OUTPUT:
100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:20:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

C="Invalido"
if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.130251
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:20:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

C="Invalido"
if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- OUTPUT:
100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:20:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

C="Invalido"
if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- OUTPUT:
100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:21:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.137763
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:21:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.147822
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:21:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.186701
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
100
animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:21:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.104467
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
100
animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
100
animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:21:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.235322
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:21:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.286615
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
7
animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:21:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.343274
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:21:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input("Entrada:"))

print(q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.23124
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
50
animal: Onca-pintada
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:50
animal: Onca-pintada
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:22:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input(""))

print("Entrada:",q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:22:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input(""))

print("Entrada:",q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- EXECUTION TIME:
0.145251
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:22:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input(""))

print("Entrada:",q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:22:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
q=int(input(""))

print("Entrada:",q)

if(q==2 or q==5 or q==10 or q==20 or q==50 or q==100):
	if(q==2):
		b="Tartaruga"
	else:
		if(q==5):
			b="Garca"
		else:
			if(q==10):
				b="Arara"
			else:
				if(q==20):
					b="Mico-leao-dourado"
				else:
					if(q==50):
						b="Onca-pintada"
					else:
						if(q==100):
							b="Garoupa"
	
else:
	b="Invalido"
print("animal:",b)


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:24:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input(""))

print("Entrada:",X)

if(X==2 or X==5 or X==10 or X==20 or X==50 or X==100):
	if(X==2):
		Y="Tartaruga"
	else:
		if(X==5):
			Y="Garca"
		else:
			if(X==10):
				Y="Arara"
			else:
				if(X==20):
					Y="Mico-leao-dourado"
				else:
					if(X==50):
						Y="Onca-pintada"
					else:
						if(X==100):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("animal:",Y)


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:25:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input(""))

print("Entrada:",X)

if(X==2 or X==5 or X==10 or X==20 or X==50 or X==100):
	if(X==2):
		Y="Tartaruga"
	else:
		if(X==5):
			Y="Garca"
		else:
			if(X==10):
				Y="Arara"
			else:
				if(X==20):
					Y="Mico-leao-dourado"
				else:
					if(X==50):
						Y="Onca-pintada"
					else:
						if(X==100):
							Y="Garoupa"
	
else:
	Y="Invalido"
print("animal:",Y)


-- EXECUTION TIME:
0.140394
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:08:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input(""))

print("Entrada:",X)


if(X==2):
	Y="Tartaruga"
elif(X==5):
	Y="Garca"
elif(X==10):
	Y="Arara"
elif(X==20):
	Y="Mico-leao-dourado"
elif(X==50):
	Y="Onca-pintada"
elif(X==100):
	Y="Garoupa"	
else:
	Y="Invalido"
print("animal:",Y)


-- EXECUTION TIME:
0.18895
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 23:09:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
X=int(input(""))

print("Entrada:",X)


if(X==2):
	Y="Tartaruga"
elif(X==5):
	Y="Garca"
elif(X==10):
	Y="Arara"
elif(X==20):
	Y="Mico-leao-dourado"
elif(X==50):
	Y="Onca-pintada"
elif(X==100):
	Y="Garoupa"
	
else:
	Y="Invalido"
print("Animal:",Y)


-- EXECUTION TIME:
0.151872
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
